# SpaceBridge-MCP

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.roo/rules/: 01-general.md
src/spacebridge_mcp/: __init__.py  duplicate_detection.py  resources.py  server.py  spacebridge_client.py  tools.py
tests/: conftest.py  test_client.py  test_client_error_handling.py  test_resources.py  test_server.py
